# aus-identity

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  llms-full.txt  llms.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  release.yml  test.yml
src/aus_identity/: __init__.py  anzsic.py  period.py  postcode.py  state.py
tests/: test_period.py  test_postcode.py  test_state.py
